# aia-read-svc

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  test.py
.github/workflows/: docker-image.yml
aia_read_svc/: daemon.py  numbers_to_letters.py  read_svc.py  wh40kSvc.py  whatsappSvc.py  yahooMailSvc.py
aia_read_svc/model/: read_model.py  wh40k_enum.py  wh40k_model.py
aia_read_svc/repositories/: aiaRepo.py  aiaWh40kRepo.py
kafka/: Queue.py
repositories/: aiaRepo.py  aiaWh40kRepo.py
resources/: log_cfg.yaml
resources/test/: semanticGraphWH40k.json  sgWH40K_tactical.json  wh40k_ancient.json
tests/: test_aiaRepo.py  test_aiaWh40kRepo.py  test_mail.py  test_wh40k.py  test_whatsapp.py  test_yahoo.py
