[tool.poetry]
name = "aia-read-svc"
version = "0.3.5"
description = ""
authors = ["Edgar Rodrigo Sanchez De Gracia <edgr.sanchez@mercadolibre.cl>"]
readme = "README.md"
packages = [{include = "aia_read_svc"}]

[tool.pytest.ini_options]
pythonpath = "aia_read_svc"

[tool.poetry.dependencies]
python = ">=3.11.2,<3.12"
numpy = "^1.24.0"
whatsapp-web = "^0.0.1"
pyautogui = "^0.9.54"
jmespath = "^1.0.1"
httpx = "^0.25.2"
parsel = "^1.8.1"
coverage = "^7.3.2"
requests = "^2.31.0"
html-to-json = "^2.0.0"
beautifulsoup4 = "^4.12.2"
openai = "^1.3.8"
python-Levenshtein = "^0.23.0"
poetry = "^1.7.1"
aia_utils = "^0.3.3"
pywhatkit = "5.4"
selenium = "^4.23.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
daemon = 'aia_read_svc.daemon:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
